WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Composicao_produto__c.object
<CustomObject>
    <fields>
        <fullName>Controla_quantidade__c</fullName>
        <label>Controla quantidade</label>
        <picklist>
            <controllingField>Funcao__c</controllingField>
            <picklistValues>
                <fullName>Mesma quantidade do item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No máximo a quantidade do item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualquer quantidade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funcao__c</fullName>
        <inlineHelpText>Combo: Adiciona os itens com o preço do produto pai do combo.
Obrigatório: Adiciona os itens com o preço de cada um dos itens.
Complementar: Facilidade para busca de produtos complementares.
Cross selling: Sugestão de produtos a vender junto a este.</inlineHelpText>
        <label>Função</label>
        <picklist>
            <picklistValues>
                <fullName>Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obrigatório</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complementar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross selling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Id_Unico__c</fullName>
        <description>Impede que dois produtos tenham mais de uma relação</description>
        <label>Id Único</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Produto_filho__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto filho</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Composição dos produtos (como produto filho)</relationshipLabel>
        <relationshipName>Produtos_filho</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_pai__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Pai</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Composição dos produtos</relationshipLabel>
        <relationshipName>Composicao_produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantidade__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Informação usada para composições do tipo combo ou obrigatório.</inlineHelpText>
        <label>Quantidade</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Composição do produto</label>
    <nameField>
        <displayFormat>COMP{000000}</displayFormat>
        <label>Número da composição</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Composição dos produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Funcao_alterar</fullName>
        <active>true</active>
        <description>Não permite alterar a função do registro. Na necessidade, o ideal é excluir um registro e criar outro</description>
        <errorConditionFormula>AND( 
   NOT( ISNEW() ),
   ISCHANGED( Funcao__c ) 
)</errorConditionFormula>
        <errorDisplayField>Funcao__c</errorDisplayField>
        <errorMessage>Não é possível alterar o campo Função.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Produto_Filho</fullName>
        <active>true</active>
        <description>Um produto não pode ser filho de si mesmo</description>
        <errorConditionFormula>Produto_pai__c =  Produto_filho__c</errorConditionFormula>
        <errorMessage>Um produto não pode ser filho de si mesmo</errorMessage>
    </validationRules>
</CustomObject>